SDM-2642: Adjust AmqpService into post-action framework (#132)
* SDM-2642: Make MessagePopulatorFactory and PostActionFactory interfaces.

* SDM-2642: Replace AmqpService with SwimRabbitMQPublisher and factory. Rework healt contributors.

* Small api fix.

* SDM-2642: Remove redundant implements interface.

* SDM-2642: Add and apply ObjectFactoryConfigFactory and some utilities.